# libYT

./: ._Makefile  ._universal.sh  .gitignore  CMakeLists.txt  Channel.c  Channel.h  Config.c  Config.h  Makefile  Net.c  Net.h  Video.c  Video.h  main.c  universal.sh
cpp/: Makefile  libytmm.dylib
ffi/: Makefile  libyt.dylib
include/: Channel.h  Config.h  List.h  Makefile  Net.h  Video.h  Videos.h  YT.h  ytall.h
java/: Makefile  SWIGTYPE_p_List.java  SWIGTYPE_p_f_p_struct_Channel_p_void__void.java  SWIGTYPE_p_f_p_struct_Video_p_void__void.java  SWIGTYPE_p_p_Channel.java  SWIGTYPE_p_p_void.java  SWIGTYPE_p_void.java  findhome.sh  yt.c  yt.i  yt.java  ytJNI.java
pascal/: Makefile  ytall.pas
python/: Channel.py  Config.py  Makefile  Video.py  test.py  yt.c  yt.i  yt.py  yt_saves.json
src/main/: ._Channel.c  ._Config.c  ._Net.c  Channel.c  Config.c  Net.c  Req_Curl.c  Sort.c  Sort.h  Util.c  Util.h  Video.c
src/main/mm/: Channel.cpp  Config.cpp  Net.cpp  Video.cpp
test/: Makefile  apitest.py  libyt.dylib  main  main.c  main.cpp
